--- a/production/package.json
+++ b/production/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "imagesloaded": "^4.1.3",
     "meteor-node-stubs": "~0.2.4",
     "typedjs-placeholder": "^1.1.4"
   }
