--- a/app2/package.json
+++ b/app2/package.json
@@ -6,7 +6,11 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "es6-promise": "^4.1.1",
+    "isomorphic-fetch": "^2.2.1",
     "meteor-node-stubs": "~0.2.4",
-    "node-unsplash": "^0.1.0"
+    "node-fetch": "^1.7.1",
+    "node-unsplash": "^0.1.0",
+    "unsplash-js": "^4.6.0"
   }
 }
