--- a/production/package.json
+++ b/production/package.json
@@ -6,8 +6,11 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "es6-promise": "^4.1.1",
     "imagesloaded": "^4.1.3",
+    "isomorphic-fetch": "^2.2.1",
     "meteor-node-stubs": "~0.2.4",
-    "typedjs-placeholder": "^1.1.4"
+    "typedjs-placeholder": "^1.1.4",
+    "unsplash-js": "^4.6.0"
   }
 }
