--- a/production/package.json
+++ b/production/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "imagesloaded": "^4.1.3",
+    "jquery-tooltipster": "^3.3.0",
+    "medium-editor": "^5.23.2",
     "meteor-node-stubs": "~0.2.4",
+    "mfb": "^0.12.0",
     "typedjs-placeholder": "^1.1.4"
   }
 }
