--- a/app2/package.json
+++ b/app2/package.json
@@ -8,6 +8,7 @@
     "babel-runtime": "^6.20.0",
     "es6-promise": "^4.1.1",
     "isomorphic-fetch": "^2.2.1",
+    "mailchimp-api-v3": "^1.7.0",
     "meteor-node-stubs": "~0.2.4",
     "node-fetch": "^1.7.1",
     "node-unsplash": "^0.1.0",
