--- a/production/package.json
+++ b/production/package.json
@@ -10,6 +10,7 @@
     "imagesloaded": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
     "jquery-tooltipster": "^3.3.0",
+    "mailchimp-api-v3": "^1.7.0",
     "medium-editor": "^5.23.2",
     "meteor-node-stubs": "~0.2.4",
     "mfb": "^0.12.0",
