--- a/production/package.json
+++ b/production/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.25.0",
+    "chart.js": "^2.6.0",
     "es6-promise": "^4.1.1",
     "imagesloaded": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
