--- a/app2/package.json
+++ b/app2/package.json
@@ -11,6 +11,7 @@
     "mailchimp-api-v3": "^1.7.0",
     "meteor-node-stubs": "~0.2.4",
     "node-fetch": "^1.7.1",
+    "node-schedule": "^1.2.4",
     "node-unsplash": "^0.1.0",
     "unsplash-js": "^4.6.0"
   }
