--- a/production/package.json
+++ b/production/package.json
@@ -2,7 +2,8 @@
   "name": "production",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+	"postinstall": "meteor npm remove jquery"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
@@ -11,9 +12,7 @@
     "es6-promise": "^4.1.1",
     "imagesloaded": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
-    "jquery-tooltipster": "^3.3.0",
     "mailchimp-api-v3": "^1.7.0",
-    "medium-editor": "^5.23.2",
     "meteor-node-stubs": "~0.2.4",
     "mfb": "^0.12.0",
     "node-schedule": "^1.2.4",
