--- a/production/package.json
+++ b/production/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-	"postinstall": "meteor npm remove jquery"
+    "postinstall": "meteor npm remove jquery"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "bootstrap-select": "^1.12.4",
     "chart.js": "^2.7.0",
     "es6-promise": "^4.1.1",
+    "flickity": "^2.0.10",
     "imagesloaded": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
     "mailchimp-api-v3": "^1.7.0",
