--- a/production/package.json
+++ b/production/package.json
@@ -10,12 +10,15 @@
     "bootstrap-select": "^1.12.4",
     "chart.js": "^2.7.0",
     "es6-promise": "^4.1.1",
+    "file-system": "^2.2.2",
     "flickity": "^2.0.10",
     "imagesloaded": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
+    "keyword-extractor": "0.0.14",
     "mailchimp-api-v3": "^1.7.0",
     "meteor-node-stubs": "~0.2.4",
     "mfb": "^0.12.0",
+    "node-rake": "0.0.9",
     "node-schedule": "^1.2.4",
     "typedjs-placeholder": "^1.1.4",
     "unsplash-js": "^4.6.0"
