--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "postinstall": "meteor npm remove jquery && meteor add tap:i18n && meteor list"
+    "postinstall": "meteor npm remove jquery && meteor add cordova:cordova-plugin-device@1.1.5 && meteor add cordova:phonegap-plugin-push@1.5.2"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
