--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "es6-promise": "^4.1.1",
     "file-system": "^2.2.2",
     "flickity": "^2.0.10",
+    "gridfs-stream": "^1.1.1",
     "imagesloaded": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
     "keyword-extractor": "0.0.14",
