--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "production",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "meteor npm remove jquery && meteor run",
     "postinstall": "meteor npm remove jquery"
   },
   "dependencies": {
