--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gridfs-stream": "^1.1.1",
     "imagesloaded": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
+    "jquery":"^1.9.1",
     "keyword-extractor": "0.0.14",
     "mailchimp-api-v3": "^1.7.1",
     "meteor-node-stubs": "~0.2.4",
