--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "gridfs-stream": "^1.1.1",
     "imagesloaded": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
-    "jquery":"^1.9.1",
+    "jquery": "^1.9.1",
     "keyword-extractor": "0.0.14",
     "mailchimp-api-v3": "^1.7.1",
     "meteor-node-stubs": "~0.2.4",
     "mfb": "^0.12.0",
     "node-rake": "0.0.9",
     "node-schedule": "^1.2.5",
+    "twitter": "^1.7.1",
     "typedjs-placeholder": "^1.1.4",
     "unsplash-js": "^4.6.0"
   }
