calendar page work

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,3 +1,126 @@
 {
-  "esversion": 6
+
+    "maxerr"        : 100,
+    "esversion"     : 6,       
+
+    "bitwise"       : true,     
+    "camelcase"     : true,     
+    "curly"         : true,     
+    "eqeqeq"        : true,     
+    "forin"         : true,     
+    "immed"         : false,    
+    "indent"        : 2,        
+    "latedef"       : false,    
+    "newcap"        : false,    
+    "noarg"         : true,    
+    "noempty"       : true,     
+    "nonew"         : false,    
+    "plusplus"      : false,   
+    "quotmark"      : false,    
+    "undef"         : true,     
+    "unused"        : true,     
+    "strict"        : false,     
+    "trailing"      : true,     
+    "maxparams"     : false,    
+    "maxdepth"      : false,    
+    "maxstatements" : false,    
+    "maxcomplexity" : false,    
+    "maxlen"        : 1200,      
+
+    "asi"           : false,     
+    "boss"          : false,     
+    "debug"         : false,     
+    "eqnull"        : false,     
+    "esnext"        : false,     
+    "moz"           : false,     
+    "evil"          : false,     
+    "expr"          : false,     
+    "funcscope"     : false,     
+    "globalstrict"  : false,      
+    "iterator"      : false,     
+    "lastsemic"     : false,     
+    "laxbreak"      : false,     
+    "laxcomma"      : false,     
+    "loopfunc"      : false,     
+    "multistr"      : false,     
+    "proto"         : false,     
+    "scripturl"     : false,     
+    "smarttabs"     : false,     
+    "shadow"        : false,     
+    "sub"           : false,     
+    "supernew"      : false,    
+    "validthis"     : false,     
+
+    "browser"       : true,     
+    "couch"         : false,    
+    "devel"         : true,     
+    "dojo"          : false,    
+    "jquery"        : false,    
+    "mootools"      : false,    
+    "node"          : false,    
+    "nonstandard"   : false,    
+    "prototypejs"   : false,    
+    "rhino"         : false,    
+    "worker"        : false,    
+    "wsh"           : false,    
+    "yui"           : false,    
+
+    "nomen"         : false,    
+    "onevar"        : false,    
+    "passfail"      : false,    
+    "white"         : false,    
+
+    "globals"       : {
+      "Meteor": false,
+      "DDP": false,
+      "Mongo": false, 
+      "Session": false,
+      "Accounts": false,
+      "Template": false,
+      "Blaze": false,
+      "BlazeLayout": false, 
+      "UI": false,
+      "Match": false,
+      "check": false,
+      "Tracker": false, 
+      "Deps": false,
+      "ReactiveVar": false,
+      "EJSON": false,
+      "HTTP": false,
+      "Email": false,
+      "Assets": false,
+      "Handlebars": false,     
+      "Package": false,
+      "App": false, 
+
+      "DDPServer": false,
+      "global": false,
+      "Log": false,
+      "MongoInternals": false,
+      "process": false,
+      "WebApp": false,
+      "WebAppInternals": false,
+      "Modal": false,
+      "setTitle": false,
+      "Posts": false,
+      "Courses": false,
+      "Suggestions": false,
+      "alertError": false,
+      "alertSuccess": false,
+      "Clubs": false,
+      "moment": false,
+      "Categories": false,
+      "BlogCategories": false,
+      "alertPrompt": false,
+      "alertConfirm": false,
+      "hasUnsplash": false,
+      "Npm": false,
+      "Tinytest": false,
+      "Roles": false,
+      "Random": false,
+      "_": false,               
+      "$": false,               
+      "FlowRouter": false,
+      "Dropzone": false      
+    }
 }
