--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "es6-promise": "^4.1.1",
     "file-system": "^2.2.2",
     "flickity": "^2.0.10",
+    "fullcalendar": "^3.8.0",
     "gridfs-stream": "^1.1.1",
     "imagesloaded": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
@@ -27,5 +28,8 @@
     "twitter": "^1.7.1",
     "typedjs-placeholder": "^1.1.4",
     "unsplash-js": "^4.6.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-promise": "^3.6.0"
   }
 }
