--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "imagesloaded": "^4.1.3",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^1.9.1",
+    "jquery-timepicker": "^1.3.3",
     "keyword-extractor": "0.0.14",
     "mailchimp-api-v3": "^1.7.1",
     "meteor-node-stubs": "^0.2.11",
@@ -29,6 +30,7 @@
     "unsplash-js": "^4.6.0"
   },
   "devDependencies": {
+    "dragselect": "^1.7.17",
     "eslint-plugin-promise": "^3.6.0"
   }
 }
